--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,16 @@
 /* Import google fonts */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&family=Poppins:wght@300;400;500;600;700;800&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap");
 */
 /* Start Gloabal Rules */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+:root {
+  --main-red: #f21b3f;
+  --main-blue:#0066ff;
+  --second-white:#fafafa;
 }
 html {
   /* any scroll in the web page its smooth */
@@ -14,7 +19,6 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
-  font-family: "Poppins", sans-serif;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 /* End Gloabal Rules */
