--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -6,9 +6,10 @@
   font-family: PSRaveFont;
 }
 .navbar__container {
-  display: flex;
   position: sticky;
   top: 0;
+  z-index: 99;
+  display: flex;
   padding: 0 15px;
   flex-direction: row;
   justify-content: space-between;
@@ -16,7 +17,11 @@
   height: 70px;
   background-color: white;
   box-shadow: rgb(0 0 0 / 8%) 0 1px;
-  transition: all 0.3s cubic-bezier(0.6, 0.4, 0, 1);
+  transition: var(--transition);
+}
+.navbar__container .sticky {
+  position: fixed;
+  top: 0;
 }
 .navbar__container .logo__container {
   display: flex;
@@ -72,7 +77,7 @@
   background-color: var(--main-blue);
   height: 4px;
   width: 100%;
-  transition: ease-in-out all 0.35s;
+  transition: var(--transition);
   top: 0;
   left: -100%;
   overflow: hidden;
@@ -91,7 +96,7 @@
   font-weight: 500;
 }
 .navbar__container .nav__item:hover .nav__link {
-  transition: ease-in-out all 0.3s;
+  transition: var(--transition);
   color: var(--main-blue);
 }
 .navbar__container .links_logged ul {
@@ -148,10 +153,10 @@
   background-color: var(--main-blue);
   text-align: center;
   border-radius: 8px;
-  transition: ease-in-out all 0.3s;
+  transition: var(--transition);
 }
 .navbar__container .links_logged ul .sign_up a:hover {
-  background-color: #005ae2;
+  background-color: #065bdb;
 }
 .navbar__container .menu--open,
 .navbar__container .menu--close {
@@ -166,12 +171,15 @@
   background-color: rgba(11, 76, 126, 0.45);
   opacity: 0;
   visibility: hidden;
-  transition: ease-in-out all 0.3s;
+  transition: var(--transition);
 }
 @media (max-width: 767px) {
   .navbar__container .menu--open {
-    display: inline;
+    display: block;
     cursor: pointer;
+    padding: 2px 2px 0 2px;
+    border-radius: 8px;
+    border: 1px rgb(0 0 0 / 10%) solid;
   }
   .navbar__container .nav .menu--close {
     display: block;
@@ -179,6 +187,9 @@
     right: 15px;
     top: 18px;
     cursor: pointer;
+    padding: 2px 2px 0 2px;
+    border-radius: 8px;
+    border: 1px rgb(0 0 0 / 10%) solid;
   }
   .navbar__container .nav {
     position: fixed;
@@ -189,25 +200,25 @@
     right: -100%;
     width: 50%;
     z-index: 100;
-    transition: ease-in-out all 0.3s;
-    padding: 60px 0;
+    transition: var(--transition);
+    padding: 80px 0;
     overflow: hidden;
   }
   .navbar__container .nav__list {
     flex-direction: column;
     width: 100%;
   }
-  .navbar__container .nav__list .nav__item{
-   text-align: start;
-   padding:10px 0 ;
-   margin: 0;
-   font-size: 16px;
-   height: 40px;
-   width: 100%;
-   border-left: 6px var(--main-blue) solid;
-   margin-bottom: 10px;
+  .navbar__container .nav__list .nav__item {
+    text-align: start;
+    padding: 10px 0;
+    margin: 0;
+    font-size: 16px;
+    height: 40px;
+    width: 100%;
+    border-left: 6px var(--main-blue) solid;
+    margin-bottom: 10px;
   }
-  .navbar__container .nav__list .nav__item .nav__link{ 
+  .navbar__container .nav__list .nav__item .nav__link {
     padding-left: 20px;
     height: 100%;
     width: 100%;
