--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 /* Import google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&family=Poppins:wght@300;400;500;600;700;800&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400&display=swap");
-*/
+
 /* Start Gloabal Rules */
 * {
   -webkit-box-sizing: border-box;
@@ -12,13 +12,11 @@
   --main-blue: #0066ff;
   --second-white: #fafafa;
   --transition: ease-in-out all 0.3s;
+  --transition--access: ease-in-out all 0.6s;
+  --main-access-color: #14213d;
+  --second-access-color: #003049;
 }
-html {
-  /* any scroll in the web page its smooth */
-  scroll-behavior: smooth;
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-}
+
 body {
   font-family: "Inter", sans-serif;
 }
