add tradded section to home page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,6 +11,7 @@
   --main-red: #f21b3f;
   --main-blue: #0066ff;
   --second-white: #fafafa;
+  --second-yellow: #f1b838;
   --transition: ease-in-out all 0.3s;
   --transition--access: ease-in-out all 0.6s;
   --main-access-color: #14213d;
