--- a/frontend/src/components/BrowseGameContainer/BrowseGameContainer.css
+++ b/frontend/src/components/BrowseGameContainer/BrowseGameContainer.css
@@ -17,6 +17,7 @@
   width: 100%;
   height: 100%;
   margin-bottom: 5px;
+  padding: 2px;
 }
 .browse_container .browse_game_container a .img_container img {
   min-width: 100%;
@@ -26,6 +27,7 @@
 }
 .browse_container .browse_game_container a .img_container img:hover {
   opacity: 0.8;
+  outline: 2px solid var(--main-access-color);
 }
 .browse_container .browse_game_container a .name {
   font-size: 15px;
