--- a/frontend/src/components/BrowseGameContainer/BrowseGameContainer.css
+++ b/frontend/src/components/BrowseGameContainer/BrowseGameContainer.css
@@ -1,4 +1,4 @@
-.browse_container .browse_game_container {
+.browse_game_container {
   display: flex;
   flex-direction: column;
   margin: 7px;
@@ -9,27 +9,27 @@
   margin-bottom: 20px;
   position: relative;
 }
-.browse_container .browse_game_container a {
+.browse_game_container a {
   text-decoration: none;
   color: inherit;
 }
-.browse_container .browse_game_container a .img_container {
+.browse_game_container a .img_container {
   width: 100%;
   height: 100%;
   margin-bottom: 5px;
   padding: 2px;
 }
-.browse_container .browse_game_container a .img_container img {
+.browse_game_container a .img_container img {
   min-width: 100%;
   width: 100%;
   transition: opacity 0.4s ease;
   border-radius: 6px;
 }
-.browse_container .browse_game_container a .img_container img:hover {
+.browse_game_container a .img_container img:hover {
   opacity: 0.8;
   outline: 2px solid var(--main-access-color);
 }
-.browse_container .browse_game_container a .name {
+.browse_game_container a .name {
   font-size: 15px;
   line-height: 20px;
   min-height: 39px;
@@ -37,23 +37,23 @@
 }
 
 @media (max-width: 991px) {
-  .browse_container .browse_game_container {
+  .browse_game_container {
     min-width: calc(27vw - 50px);
     width: calc(27vw - 50px);
   }
 }
 @media (max-width: 767px) {
-  .browse_container .browse_game_container {
+  .browse_game_container {
     min-width: calc(35vw - 50px);
     width: calc(35vw - 50px);
   }
 }
 @media (max-width: 575px) {
-  .browse_container .browse_game_container {
+  .browse_game_container {
     min-width: calc(51vw - 50px);
     width: calc(51vw - 50px);
   }
-  .browse_container .browse_game_container a .name {
+  .browse_game_container a .name {
     font-size: 13px;
     min-height: 36px;
   }
