--- a/frontend/src/components/TraddedSection/TraddedSection.css
+++ b/frontend/src/components/TraddedSection/TraddedSection.css
@@ -1,29 +1,29 @@
-.trade_container {
+.trade_homepage_container {
   margin: 80px 0;
 }
-.trade_container .inner_container {
+.trade_homepage_container .inner_container {
   width: 100%;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
-.trade_container .inner_container .container-heading {
+.trade_homepage_container .inner_container .container-heading {
   margin-bottom: 60px;
   text-align: center;
 }
-.trade_container .inner_container .container-heading .title {
+.trade_homepage_container .inner_container .container-heading .title {
   font-size: 2.3rem;
   font-weight: bold;
   color: var(--main-access-color);
 }
-.trade_container .inner_container .row-flex {
+.trade_homepage_container .inner_container .row-flex {
   display: flex;
   flex-direction: row;
   align-items: stretch;
   justify-content: space-between;
 }
-.trade_container .inner_container .row-flex .one-row {
+.trade_homepage_container .inner_container .row-flex .one-row {
   padding: 15px;
   display: flex;
   flex-direction: column;
@@ -38,17 +38,17 @@
   margin-right: 10px;
   color: var(--main-access-color);
 }
-.trade_container .inner_container .row-flex .one-row:hover {
+.trade_homepage_container .inner_container .row-flex .one-row:hover {
   background-color: var(--second-yellow);
   transform: translateY(-10px);
 }
-.trade_container .inner_container .row-flex .one-row:hover .one-row-icon {
+.trade_homepage_container .inner_container .row-flex .one-row:hover .one-row-icon {
   background-color: white;
 }
-.trade_container .inner_container .row-flex .one-row:hover .one-row-icon .icon {
+.trade_homepage_container .inner_container .row-flex .one-row:hover .one-row-icon .icon {
   color: var(--second-yellow);
 }
-.trade_container .inner_container .row-flex .one-row .one-row-icon {
+.trade_homepage_container .inner_container .row-flex .one-row .one-row-icon {
   width: 80px;
   height: 80px;
   background-color: var(--second-yellow);
@@ -57,15 +57,15 @@
   align-items: center;
   justify-content: center;
 }
-.trade_container .inner_container .row-flex .one-row .one-row-icon .icon {
+.trade_homepage_container .inner_container .row-flex .one-row .one-row-icon .icon {
   color: var(--main-access-color);
 }
-.trade_container .inner_container .row-flex .one-row h4 {
+.trade_homepage_container .inner_container .row-flex .one-row h4 {
   font-size: 22px;
   margin-top: 15px !important;
   margin: 0;
 }
-.trade_container .inner_container .row-flex .one-row p {
+.trade_homepage_container .inner_container .row-flex .one-row p {
   line-height: 25px;
   font-size: 15px;
   margin-top: 20px !important;
@@ -74,22 +74,24 @@
   letter-spacing: 0.05px;
 }
 @media (max-width: 767px) {
-  .trade_container {
+  .trade_homepage_container {
     margin: 60px 0;
   }
-  .trade_container .inner_container {
+  .trade_homepage_container .inner_container {
     width: 95%;
   }
-  .trade_container .inner_container .container-heading {
+  .trade_homepage_container .inner_container .container-heading {
     margin-bottom: 40px;
   }
-  .trade_container .inner_container .container-heading .title {
+  .trade_homepage_container .inner_container .container-heading .title {
     font-size: 1.8rem;
   }
-  .trade_container .inner_container .row-flex {
+  .trade_homepage_container .inner_container .row-flex {
     flex-direction: column;
   }
-  .trade_container .inner_container .row-flex .one-row {
+  .trade_homepage_container .inner_container .row-flex .one-row {
     width: 100%;
+    margin: 0;
+    margin-bottom: 10px !important;
   }
 }
