add user menu to avatar of home page

--- a/frontend/src/components/Landing/Landing.css
+++ b/frontend/src/components/Landing/Landing.css
@@ -64,6 +64,9 @@
 }
 
 @media (max-width: 767px) {
+  .landing--container .landing--text{
+    max-width: 90%;
+  }
   .landing--container .landing--text h2{
     font-size: 25px;
   }
