--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -139,8 +139,9 @@
   align-items: center;
   justify-content: space-between;
   background-color: #e9ecef;
-  padding: 1px 0 1px 10px;
+  padding: 1px 0 1px 15px;
   border-radius: 30px;
+  color: #14213d;
   cursor: pointer;
   transition: ease-in-out all 0.5s;
   position: relative;
