--- a/frontend/src/pages/TradedGameInfo/TradedGameInfo.css
+++ b/frontend/src/pages/TradedGameInfo/TradedGameInfo.css
@@ -1,8 +1,8 @@
-.game_info_container {
+.tradded_game_info_container {
   position: relative;
   width: 100%;
 }
-.game_info_container .main_Card {
+.tradded_game_info_container .main_Card {
   position: absolute;
   background-color: rgb(31 32 36 / 97%);
   padding: 30px 60px 30px 30px;
@@ -18,27 +18,27 @@
   color: white;
   overflow: hidden;
 }
-.game_info_container .main_Card .name {
+.tradded_game_info_container .main_Card .name {
   font-size: 32px;
   font-weight: normal;
   margin-bottom: 15px !important;
   margin: 0;
 }
-.game_info_container .main_Card .publisher {
+.tradded_game_info_container .main_Card .publisher {
   font-size: 11px;
   text-transform: uppercase;
   font-weight: 600;
 }
-.game_info_container .main_Card .price {
+.tradded_game_info_container .main_Card .price {
   font-size: 25px;
   font-weight: lighter;
   margin-top: 10px;
 }
-.game_info_container .main_Card .platforms {
+.tradded_game_info_container .main_Card .platforms {
   display: flex;
   align-items: center;
 }
-.game_info_container .main_Card .platforms .platform {
+.tradded_game_info_container .main_Card .platforms .platform {
   font-size: 8px;
   border: 1px #fff solid;
   border-radius: 3px;
@@ -47,7 +47,14 @@
   font-family: PSRaveFont;
   width: fit-content;
 }
-.game_info_container .main_Card .buy-btn {
+.tradded_game_info_container .main_Card .place_action {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  font-weight: 500
+}
+.tradded_game_info_container .main_Card .buy-btn {
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -60,31 +67,31 @@
   margin-left: auto;
   font-weight: bold;
   background-color: #25d366;
-  width: 45%;
+  width: 50%;
   height: 45px;
   color: white;
 }
-.game_info_container .main_Card .buy-btn span {
+.tradded_game_info_container .main_Card .buy-btn span {
   margin-right: 5px;
 }
-.game_info_container .image_and_info_container {
+.tradded_game_info_container .image_and_info_container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
 }
-.game_info_container .image_and_info_container .img_container {
+.tradded_game_info_container .image_and_info_container .img_container {
   width: 100%;
   height: 450px;
   overflow: hidden;
 }
-.game_info_container .image_and_info_container .img_container img {
+.tradded_game_info_container .image_and_info_container .img_container img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.game_info_container .image_and_info_container .info_section {
+.tradded_game_info_container .image_and_info_container .info_section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -92,7 +99,10 @@
   background-color: black;
   color: white;
 }
-.game_info_container .image_and_info_container .info_section .game-info {
+.tradded_game_info_container
+  .image_and_info_container
+  .info_section
+  .game-info {
   margin-top: 130px;
   margin-left: auto;
   margin-right: auto;
@@ -100,7 +110,11 @@
   max-height: 800px;
   margin-bottom: 30px;
 }
-.game_info_container .image_and_info_container .info_section .game-info h2 {
+.tradded_game_info_container
+  .image_and_info_container
+  .info_section
+  .game-info
+  h2 {
   width: fit-content;
   font-size: 32px;
   font-weight: 500;
@@ -108,7 +122,7 @@
   margin-bottom: 35px !important;
   color: white;
 }
-.game_info_container
+.tradded_game_info_container
   .image_and_info_container
   .info_section
   .game-info
@@ -119,21 +133,28 @@
   line-height: 1.4;
   font-size: 15px;
 }
-.game_info_container .image_and_info_container .info_section .basic-info {
+.tradded_game_info_container
+  .image_and_info_container
+  .info_section
+  .basic-info {
   width: 50%;
   overflow: hidden;
   color: white;
   margin-bottom: 20px;
   margin-top: 20px;
 }
-.game_info_container .image_and_info_container .info_section .basic-info .item {
+.tradded_game_info_container
+  .image_and_info_container
+  .info_section
+  .basic-info
+  .item {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   margin: 15px;
 }
-.game_info_container
+.tradded_game_info_container
   .image_and_info_container
   .info_section
   .basic-info
@@ -142,7 +163,7 @@
   font-size: 12px;
   font-weight: 400;
 }
-.game_info_container
+.tradded_game_info_container
   .image_and_info_container
   .info_section
   .basic-info
@@ -153,34 +174,55 @@
   width: 60%;
 }
 @media (max-width: 767px) {
-  .game_info_container .image_and_info_container .info_section .game-info {
+  .tradded_game_info_container
+    .image_and_info_container
+    .info_section
+    .game-info {
     width: 90%;
   }
-  .game_info_container .image_and_info_container .info_section .game-info h2 {
+  .tradded_game_info_container
+    .image_and_info_container
+    .info_section
+    .game-info
+    h2 {
     font-size: 28px;
   }
-  .game_info_container .image_and_info_container .info_section .basic-info {
+  .tradded_game_info_container
+    .image_and_info_container
+    .info_section
+    .basic-info {
     width: 75%;
   }
 }
 @media (max-width: 575px) {
-  .game_info_container .main_Card {
+  .tradded_game_info_container .main_Card {
     left: 0;
     right: 0;
     max-height: 260px;
     top: 340px;
+    min-width: 0;
   }
-  .game_info_container .main_Card .name {
+  .tradded_game_info_container .main_Card .name {
     font-size: 25px;
   }
-  .game_info_container .image_and_info_container .info_section .game-info {
+  .tradded_game_info_container
+    .image_and_info_container
+    .info_section
+    .game-info {
     margin-top: 160px;
     width: 92%;
   }
-  .game_info_container .image_and_info_container .info_section .game-info h2 {
+  .tradded_game_info_container
+    .image_and_info_container
+    .info_section
+    .game-info
+    h2 {
     font-size: 25px;
   }
-  .game_info_container .image_and_info_container .info_section .basic-info {
+  .tradded_game_info_container
+    .image_and_info_container
+    .info_section
+    .basic-info {
     width: 95%;
   }
 }
